# openscholar

./: README.md  app.py  pyproject.toml
config/: demo_config.json  training_config.json
scripts/: train_generator.py  train_openscholar.py  train_retriever.py
src/openscholar/: __init__.py  data_generation.py  datastore.py  evaluation.py  generator.py  pipeline.py  retriever.py
src/openscholar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
